Fix tooltip click on mobile Add white borders to escalation features

--- a/src/components/chloropleth/chloropleth.module.scss
+++ b/src/components/chloropleth/chloropleth.module.scss
@@ -20,7 +20,7 @@
 .chloroplethContainer.escalationMap {
   .svgMap {
     path {
-      stroke: #595959;
+      stroke: white;
     }
 
     path.overlay {
