--- a/src/components/chloropleth/tooltips/tooltip.module.scss
+++ b/src/components/chloropleth/tooltips/tooltip.module.scss
@@ -35,6 +35,7 @@
   border-radius: 4px;
   margin: 0;
   padding: 0;
+  pointer-events: all;
   cursor: pointer;
 
   .escalationTooltipHeader {
